torch quadratic classifier is ready for experiments, need to check quadratic classifier (no torch)

--- a/quadratic_classifier_torch.ipynb
+++ b/quadratic_classifier_torch.ipynb
@@ -9,6 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import time\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.utils import shuffle\n",
     "import torch\n",
@@ -59,8 +60,8 @@
     "teams = np.array(list(zip(game_data.Team, game_data.Opponent)))\n",
     "dates = np.array(list(game_data['Date']))\n",
     "\n",
+    "# Remove duplicate games\n",
     "unique_dates = list(set(dates))\n",
-    "\n",
     "repeat_indexes = []\n",
     "\n",
     "for date in unique_dates: \n",
@@ -74,7 +75,7 @@
     "                if np.array_equal(np.flip(teams[j], axis=0) , teams[i]): \n",
     "                    repeat_indexes.append(j)\n",
     "\n",
-    "# Make new unique game results, teams and dates arrays\n",
+    "# Final dataset with unique games\n",
     "unique_game_results = game_results[repeat_indexes]\n",
     "unique_teams = teams[repeat_indexes]\n",
     "unique_dates = dates[repeat_indexes]"
@@ -87,19 +88,24 @@
    "outputs": [],
    "source": [
     "class QuadraticRegression:\n",
-    "    def __init__(self, step_size=1e-5, max_iter=2000, eps=1e-4, theta=None, \n",
+    "    def __init__(self, step_size=1e-5, max_iter=1000, eps=1e-3, batch_size =32, theta=None, \n",
     "                  verbose=True):\n",
     "        \n",
     "        self.theta = theta\n",
+    "        self.batch_size = batch_size\n",
     "        self.step_size = step_size\n",
     "        self.max_iter = max_iter\n",
     "        self.eps = eps\n",
     "        self.error_list = []\n",
     "        \n",
     "    def getSAS(self):\n",
+    "        # Top left\n",
     "        S = np.array(self.theta[0:962, 0:962])\n",
+    "        # Bottom right\n",
     "        S2 = np.array(self.theta[963:1925, 963:1925])\n",
+    "        # Top right\n",
     "        A = np.array(self.theta[0:962, 963:1925])\n",
+    "        # Bottom left\n",
     "        A2 = np.array(self.theta[963:1925, 0:962])\n",
     "        \n",
     "        return S,S2,A,A2\n",
@@ -109,14 +115,24 @@
     "        return self.sigmoid(z)\n",
     "    \n",
     "    def sigmoid(self, z): \n",
-    "        return 1.0 / (1 + np.exp(-z))\n",
+    "        return 1.0 / (1. + np.exp(-z))\n",
     "    \n",
     "    def loss_function_t(self, theta_t, x, y):\n",
+    "        EPS = 1e-8\n",
     "        x = torch.tensor(x)\n",
     "        y = torch.tensor(y)\n",
-    "        return (0.5*(y - torch.diagonal(x @ theta_t @ x.T).reshape(-1, 1)) ** 2).sum()\n",
-    "\n",
+    "        p = torch.sigmoid(x @ theta_t @ x.T)\n",
+    "        return -1.*((y * torch.log(p + EPS) + (1-y) * torch.log(1 - p + EPS)).sum())\n",
+    "    \n",
     "    def pytorch_gradient(self, x, y):\n",
+    "        theta_t = torch.tensor(self.theta, requires_grad=True)\n",
+    "        self.loss_function_t(theta_t, x, y).backward()\n",
+    "        return theta_t.grad.numpy()\n",
+    "    \n",
+    "    def pytorch_batch_gradient(self, x_teams, y_teams, index): \n",
+    "        x = x_teams[index::self.batch_size]\n",
+    "        y = y_teams[index::self.batch_size]\n",
+    "        \n",
     "        theta_t = torch.tensor(self.theta, requires_grad=True)\n",
     "        self.loss_function_t(theta_t, x, y).backward()\n",
     "        return theta_t.grad.numpy()\n",
@@ -146,8 +162,6 @@
     "    def fit(self, x, y, mini = False):\n",
     "        iterations = 0\n",
     "        abs_error = 1\n",
-    "        self.error_list = []\n",
-    "        batch_size = 32\n",
     "        ind = 0\n",
     "        \n",
     "        if self.theta is None: \n",
@@ -166,8 +180,9 @@
     "\n",
     "                print('Error {}: {}'.format(iterations, abs_error))\n",
     "        else:\n",
+    "            batch_num = 1\n",
     "            while iterations < self.max_iter and abs_error >= self.eps and abs_error < 1000000:\n",
-    "                error = self.step_size*self.pytorch_gradient(x, y)\n",
+    "                error = self.step_size*self.pytorch_batch_gradient(x, y, self.batch_size, ind)\n",
     "                abs_error = np.linalg.norm(error, 2)\n",
     "                self.error_list.append(abs_error)\n",
     "\n",
@@ -175,14 +190,14 @@
     "                self.theta = self.project(theta_new)\n",
     "\n",
     "                iterations += 1\n",
-    "                ind += batch_size\n",
+    "                ind += 1\n",
     "\n",
     "                print('Error {}: {}'.format(iterations, abs_error))\n",
     "        \n",
     "        print('Convergence!')\n",
     "        plt.plot(self.error_list)\n",
     "        plt.xlabel('Iterations')\n",
-    "        plt.ylabel('Error')\n",
+    "        plt.ylabel('Abs. Error')\n",
     "        plt.show()\n",
     "        \n",
     "    def process_data(self, teams, dates, results): \n",
@@ -197,7 +212,6 @@
     "            combined = np.vstack((z, t))\n",
     "            x_without_intercept[i, :] = combined[:, 0]\n",
     "            \n",
-    "        #x = self.add_intercept(x_without_intercept)\n",
     "        x = x_without_intercept\n",
     "        \n",
     "        # Create y for all games (if team A wins, y = 1; if team B wins, y = 0)\n",
@@ -287,11 +301,8 @@
     "        \n",
     "        predicted_y = []\n",
     "        for i in range(test_x.shape[0]):\n",
-    "            x = test_x[i,:]\n",
-    "            \n",
-    "            x_new = x\n",
-    "            # x_new = np.reshape(x, (2*num_players, 1))\n",
-    "            prediction = self.predict(x_new)\n",
+    "            x = test_x[i,:]           \n",
+    "            prediction = self.predict(x)\n",
     "            if np.asscalar(prediction) > 0.5: \n",
     "                predicted_y.append(1)\n",
     "            else: \n",
@@ -301,9 +312,10 @@
     "        return np.mean(np.array(predicted_y) == np.array(test_y.T))\n",
     "    \n",
     "    def playoff_prediction(self, playoff_filename, playoff_date): \n",
-    "        #Load playoff data\n",
+    "        # Load playoff data\n",
     "        playoff_data = pd.read_csv(os.path.join(curr_directory, playoff_filename))\n",
     "\n",
+    "        # Extract features of interest\n",
     "        raw_playoff_results = np.array(list(playoff_data['PTS'] - playoff_data['PTS.1']))\n",
     "        raw_playoff_team_pairs = np.array(list(zip(playoff_data['Visitor/Neutral'], playoff_data['Home/Neutral'])))\n",
     "        raw_playoff_dates = np.array(list(playoff_data['Date']))\n",
@@ -349,21 +361,15 @@
     "        playoff_x, playoff_y = self.process_data(playoff_teams, playoff_dates, playoff_results)\n",
     "\n",
     "        predicted_y = []\n",
-    "        predictions = []\n",
-    "\n",
     "        for i in range(playoff_x.shape[0]):\n",
     "            x = playoff_x[i,:]\n",
-    "            x_new = x\n",
-    "            # x_new = np.reshape(x, (2*num_players, 1))\n",
-    "            prediction = self.predict(x_new)\n",
-    "            predictions.append(prediction)\n",
+    "            prediction = self.predict(x)\n",
     "            if np.asscalar(prediction) > 0.5: \n",
     "                predicted_y.append(1)\n",
     "            else: \n",
     "                predicted_y.append(0)\n",
     "\n",
     "        predicted_y = np.array(predicted_y)\n",
-    "\n",
     "        prediction_accuracy = np.mean(np.array(predicted_y) == np.array(playoff_y.T[0][:]))\n",
     "\n",
     "        return prediction_accuracy"
@@ -393,19 +399,110 @@
     "        model.fit(x, y, mini=False)\n",
     "        errors[str(i)] = model.error_list\n",
     "        \n",
-    "        dev_accuracy = model.general_predict(teams_s[train_n+1:n], dates[train_n+1:n], results_s[train_n+1:n])\n",
+    "        dev_accuracy = model.general_predict(teams_s[train_n+1:n], dates_s[train_n+1:n], results_s[train_n+1:n])\n",
     "        dev_accuracies.append(dev_accuracy)\n",
     "        \n",
     "        playoff_accuracy = model.playoff_prediction(playoff_filename, date)\n",
     "        playoff_accuracies.append(playoff_accuracy)\n",
     "    \n",
-    "    return errors, dev_accuracies, playoff_accuracies"
+    "    return errors, dev_accuracies, playoff_accuracies\n",
+    "\n",
+    "def learning_rate_tune_all(teams, dates, results): \n",
+    "    lr = [1e-3, 1e-4, 1e-5]\n",
+    "    errors = {}\n",
+    "    dev_accuracies = []\n",
+    "    n = teams.shape[0]\n",
+    "    train_n = int(np.floor(0.8*n))\n",
+    "    \n",
+    "    for i in lr: \n",
+    "        print('Learning rate: {}'.format(i))\n",
+    "        # Initialize the model and process the data\n",
+    "        model = QuadraticRegression(step_size=i, max_iters=1000)\n",
+    "        teams_s, dates_s, results_s = shuffle(teams, dates, results, random_state=0)\n",
+    "        x, y = model.process_data(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "        # Fit the model (w/o mini-batch) on training set\n",
+    "        start = time.time()\n",
+    "        model.fit(x, y, mini=False)\n",
+    "        \n",
+    "        errors[str(i)] = model.error_list\n",
+    "        \n",
+    "        dev_accuracy = model.general_predict(teams_s[train_n+1:n], dates[train_n+1:n], results_s[train_n+1:n])\n",
+    "        dev_accuracies.append(dev_accuracy)\n",
+    "    \n",
+    "    return errors, dev_accuracies"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final Experiments\n",
+    "\n",
+    "# Full dataset\n",
+    "teams_s, dates_s, results_s = shuffle(unique_teams, unique_dates, unique_game_results, random_state=0)\n",
+    "train_n = 3935\n",
+    "full_n = 4919\n",
+    "\n",
+    "# Runs w/o mini-batch for different learning rates (lr = 1E-6, 5E-7, 1E-7)\n",
+    "print('Starting full batch descent with lr = 1E-6')\n",
+    "model_lr_1e6 = QuadraticRegression(step_size = 1e-6, max_iter = 500)\n",
+    "x_lr_1e6, y_lr_1e6= model_lr_1e6.process_data(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "start = time.time()\n",
+    "model_lr_1e6.fit(x_lr_1e6, y_lr_1e6, mini=False)\n",
+    "end = time.time()\n",
+    "print('Time: {}'.format(end-start))\n",
+    "train_accuracy_1e6 = model_lr_1e6.general_predict(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "dev_accuracy_1e6 = model_lr_1e6.general_predict(teams_s[train_n+1:full_n], dates_s[train_n+1:full_n], \n",
+    "                                                results_s[train_n+1:full_n])\n",
+    "errors_lr_1e6 = model_lr_1e6.error_list\n",
+    "print('Train Accuracy: {}'.format(train_accuracy_1e6))\n",
+    "print('Dev Accuracy: {}'.format(dev_accuracy_1e6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Max_iters to be adjusted based on results above.\n",
+    "print('Starting full batch descent with lr = 5E-7')\n",
+    "model_lr_5e7 = QuadraticRegression(step_size = 5e-6, max_iter = 500)\n",
+    "x_lr_5e7, y_lr_5e7= model_lr_5e7.process_data(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "start = time.time()\n",
+    "model_lr_5e7.fit(x_lr_5e7, y_lr_5e7, mini=False)\n",
+    "end = time.time()\n",
+    "print('Time: {}'.format(end-start))\n",
+    "train_accuracy_5e7 = model_lr_5e7.general_predict(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "dev_accuracy_5e7 = model_lr_5e7.general_predict(teams_s[train_n+1:full_n], dates_s[train_n+1:full_n], \n",
+    "                                                results_s[train_n+1:full_n])\n",
+    "errors_lr_5e7 = model_lr_5e7.error_list\n",
+    "print('Train Accuracy: {}'.format(train_accuracy_5e7))\n",
+    "print('Dev Accuracy: {}'.format(dev_accuracy_5e7))\n",
+    "\n",
+    "print('Starting full batch descent with lr = 1E-7')\n",
+    "model_lr_1e7 = QuadraticRegression(step_size = 1e-6, max_iter = 500)\n",
+    "x_lr_1e7, y_lr_1e7= model_lr_1e7.process_data(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "start = time.time()\n",
+    "model_lr_1e7.fit(x_lr_1e7, y_lr_1e7, mini=False)\n",
+    "end = time.time()\n",
+    "print('Time: {}'.format(end-start))\n",
+    "train_accuracy_1e7 = model_lr_1e7.general_predict(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
+    "dev_accuracy_1e7 = model_lr_1e7.general_predict(teams_s[train_n+1:full_n], dates_s[train_n+1:full_n], \n",
+    "                                                results_s[train_n+1:full_n])\n",
+    "errors_lr_1e7 = model_lr_1e7.error_list\n",
+    "print('Train Accuracy: {}'.format(train_accuracy_1e7))\n",
+    "print('Dev Accuracy: {}'.format(dev_accuracy_1e7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print('Season: 2014-2015')\n",
@@ -427,39 +524,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def learning_rate_tune_all(teams, dates, results): \n",
-    "    lr = [1e-3, 1e-4, 1e-5]\n",
-    "    errors = {}\n",
-    "    dev_accuracies = []\n",
-    "    n = teams.shape[0]\n",
-    "    train_n = int(np.floor(0.8*n))\n",
-    "    \n",
-    "    for i in lr: \n",
-    "        print('Learning rate: {}'.format(i))\n",
-    "        # Initialize the model and process the data\n",
-    "        model = QuadraticRegression(step_size=i, max_iters=1000)\n",
-    "        teams_s, dates_s, results_s = shuffle(teams, dates, results, random_state=0)\n",
-    "        x, y = model.process_data(teams_s[0:train_n], dates_s[0:train_n], results_s[0:train_n])\n",
-    "        # Fit the model (w/o mini-batch) on training set\n",
-    "        model.fit(x, y, mini=False)\n",
-    "        errors[str(i)] = model.error_list\n",
-    "        \n",
-    "        dev_accuracy = model.general_predict(teams_s[train_n+1:n], dates[train_n+1:n], results_s[train_n+1:n])\n",
-    "        dev_accuracies.append(dev_accuracy)\n",
-    "    \n",
-    "    return errors, dev_accuracies"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('All data points')\n",
-    "errors_all, dev_all, playoff_all = learning_rate_tune_all(unique_teams, unique_dates, unique_game_results)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
