processing for new data in first cell of quadratic classifier

--- a/quadratic_classifier.ipynb
+++ b/quadratic_classifier.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6501, 2)\n",
+      "(6501,)\n",
+      "(6501,)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -15,7 +25,12 @@
     "import time\n",
     "\n",
     "curr_directory = os.getcwd()\n",
-    "\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# Create index for all players + roster dictionaries\n",
+    "#\n",
+    "#\n",
     "# Player Roster Information (Copied over from player_roster.ipynb)\n",
     "teams = ['BOS','BRK','NYK','PHI','TOR','CHI','CLE','DET','IND','MIL','ATL','CHO','MIA','ORL','WAS',\n",
     "         'DEN','MIN','OKC','POR','UTA','GSW','LAC','LAL','PHO','SAC','DAL','HOU','MEM','NOP','SAS']\n",
@@ -50,7 +65,14 @@
     "        \n",
     "# Player dictionary that maps all players to index\n",
     "player_index = dict(zip(list(all_players), range(len(all_players))))\n",
-    "\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# Data Processing\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# Game data from 2014 - 2015 season to 2017-2018 season\n",
     "game_data = pd.read_csv(os.path.join(curr_directory,'data_sets/nba.games.stats.csv'))\n",
     "\n",
     "# Sort all values by the Date\n",
@@ -81,7 +103,68 @@
     "# Make new unique game results, teams and dates arrays\n",
     "unique_game_results = game_results[repeat_indexes]\n",
     "unique_teams = teams[repeat_indexes]\n",
-    "unique_dates = dates[repeat_indexes]"
+    "unique_dates = dates[repeat_indexes]\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# Game data from the 2018-2019 season and the 2019-2020 season\n",
+    "game_data_2018 = pd.read_csv(os.path.join(curr_directory,'data_sets/game_data_2018_2019.csv'))\n",
+    "game_data_2019 = pd.read_csv(os.path.join(curr_directory,'data_sets/game_data_2019_2020.csv'))\n",
+    "\n",
+    "# Strip the day of week abbreviation from Date\n",
+    "game_data_2018['Date'] = game_data_2018['Date'].str[4:]\n",
+    "game_data_2019['Date'] = game_data_2019['Date'].str[4:]\n",
+    "\n",
+    "# Date conversion functions\n",
+    "def monthToNum(shortMonth):\n",
+    "    return{\n",
+    "            'Jan' : '01',\n",
+    "            'Feb' : '02',\n",
+    "            'Mar' : '03',\n",
+    "            'Apr' : '04',\n",
+    "            'May' : '05',\n",
+    "            'Jun' : '06',\n",
+    "            'Jul' : '07',\n",
+    "            'Aug' : '08',\n",
+    "            'Sep' : '09', \n",
+    "            'Oct' : '10',\n",
+    "            'Nov' : '11',\n",
+    "            'Dec' : '12'\n",
+    "    }[shortMonth]\n",
+    "\n",
+    "def convert_dates(dataframe): \n",
+    "    for i in range(dataframe['Date'].shape[0]): \n",
+    "        if len(dataframe['Date'][i]) == 10: \n",
+    "            year = dataframe['Date'][i][6:10]\n",
+    "            date = '0' + dataframe['Date'][i][4]\n",
+    "            month = monthToNum(dataframe['Date'][i][0:3])\n",
+    "            dataframe.loc[i, 'Date'] = year + '-' + month + '-' + date\n",
+    "        else: \n",
+    "            year = dataframe['Date'][i][7:11]\n",
+    "            date = dataframe['Date'][i][4:6]\n",
+    "            month = monthToNum(dataframe['Date'][i][0:3])\n",
+    "            dataframe.loc[i, 'Date'] = year + '-' + month + '-' + date\n",
+    "\n",
+    "convert_dates(game_data_2018)\n",
+    "convert_dates(game_data_2019)\n",
+    "\n",
+    "game_results_2018 = np.array(list(game_data_2018['Visitor PTS'] - game_data_2018['Home PTS']))\n",
+    "teams_2018 = np.array(list(zip(game_data_2018.Visitor, game_data_2018.Home)))\n",
+    "dates_2018 = np.array(list(game_data_2018['Date']))\n",
+    "\n",
+    "game_results_2019 = np.array(list(game_data_2019['Visitor PTS'] - game_data_2019['Home PTS']))\n",
+    "teams_2019 = np.array(list(zip(game_data_2019.Visitor, game_data_2019.Home)))\n",
+    "dates_2019 = np.array(list(game_data_2019['Date']))\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# Combine all data into one dataset\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "teams_all = np.concatenate((unique_teams, teams_2018, teams_2019), axis=0)\n",
+    "dates_all = np.concatenate((unique_dates, dates_2018, dates_2019), axis=0)\n",
+    "results_all = np.concatenate((unique_game_results, game_results_2018, game_results_2019), axis=0)"
    ]
   },
   {
