quad classifier with training and validation errors

--- a/quadratic_classifier_final_experiments.ipynb
+++ b/quadratic_classifier_final_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,8 +282,8 @@
     "        \n",
     "        print('Convergence!')\n",
     "        plt.style.use('seaborn-darkgrid')\n",
-    "        plt.plot(training_acc, color = 'firebrick', label='Training Accuracy')\n",
-    "        plt.plot(dev_acc, color = 'teal', label='Dev Accuracy')\n",
+    "        plt.plot(self.training_acc, color = 'firebrick', label='Training Accuracy')\n",
+    "        plt.plot(self.dev_acc, color = 'teal', label='Dev Accuracy')\n",
     "        plt.xlabel('Iterations')\n",
     "        plt.ylabel('Accuracy')\n",
     "        plt.show()\n",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,42 +505,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lr = 2E-6\n",
-      "Error 1: 3.853759229851624\n",
-      "Training Accuracy: 0.6679490262082232\n",
-      "Dev Accuracy: 0.6390760346487007\n",
-      "Error 2: 2.424273187944511\n",
-      "Training Accuracy: 0.6804520317383986\n",
-      "Dev Accuracy: 0.6506256015399422\n",
-      "Error 3: 2.465223808143595\n",
-      "Training Accuracy: 0.6941572493387833\n",
-      "Dev Accuracy: 0.6573628488931665\n",
-      "Error 4: 2.3185073304523476\n",
-      "Training Accuracy: 0.6867035345034864\n",
-      "Dev Accuracy: 0.6554379210779596\n",
-      "Error 5: 2.4038810583952896\n",
-      "Training Accuracy: 0.6893484010579466\n",
-      "Dev Accuracy: 0.6564003849855631\n",
-      "Error 6: 2.3437300304317765\n",
-      "Training Accuracy: 0.6864630920894446\n",
-      "Dev Accuracy: 0.6515880654475458\n",
-      "Error 7: 2.38176307278281\n",
-      "Training Accuracy: 0.6958403462370762\n",
-      "Dev Accuracy: 0.6602502406159769\n",
-      "Error 8: 2.279387002234073\n",
-      "Training Accuracy: 0.6903101707141139\n",
-      "Dev Accuracy: 0.6573628488931665\n",
-      "Error 9: 2.3161605059061263\n",
-      "Training Accuracy: 0.6963212310651599\n",
-      "Dev Accuracy: 0.6602502406159769\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('lr = 2E-6')\n",
     "model_lr_2e6 = QuadraticRegression(step_size = 2e-6, max_iter = 20)\n",
